--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:fix": "eslint --fix -c .eslintrc.json ./src"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -18,7 +20,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
