--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "nbeverages-admin",
   "private": true,
   "scripts": {
+    "start": "serve -s build",
     "dev": "webpack-dev-server --progress --config ./webpack.dev.js",
     "build": "webpack --progress --config ./webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint -c .eslintrc.json ./src",
-    "lint:fix": "eslint --fix -c .eslintrc.json ./src"
+    "lint:fix": "eslint --fix -c .eslintrc.json ./src",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "clean-webpack-plugin": "^1.0.1",
     "deep-equal": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
@@ -22,6 +26,9 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.1",
     "redux-thunk": "^2.3.0",
+    "serve": "^10.1.2",
+    "webpack": "^4.29.3",
+    "webpack-merge": "^4.2.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -31,7 +38,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -40,14 +46,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-dev-server": "^3.1.14"
   },
   "repository": {
     "type": "git",
