--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "deep-equal": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jwt-decode": "^2.2.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
