cart functionality added

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
         "react/jsx-indent-props": [2, "tab"],
         "indent": [2, "tab"],
         "no-tabs": ["error", { "allowIndentationTabs": true }],
-        "react/jsx-one-expression-per-line": 0
+        "react/jsx-one-expression-per-line": 0,
+        "no-underscore-dangle": 0,
+        "react/forbid-prop-types": 0
     }
 }
