--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "no-tabs": ["error", { "allowIndentationTabs": true }],
         "react/jsx-one-expression-per-line": 0,
         "no-underscore-dangle": 0,
-        "react/forbid-prop-types": 0
+        "react/forbid-prop-types": 0,
+        "react/prop-types": [2, { "skipUndeclared": true }]
     }
 }
