--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "react/jsx-one-expression-per-line": 0,
         "no-underscore-dangle": 0,
         "react/forbid-prop-types": 0,
-        "react/prop-types": [2, { "skipUndeclared": true }]
+        "react/prop-types": [2, { "skipUndeclared": true }],
+        "react/destructuring-assignment": 1
     }
 }
