--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.1",
     "deep-equal": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
